First pass at Vertical Gradients in Models section
fyi, this is still incomplete. Here I added an overview of differences in model structure. More to come.

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -476,6 +476,20 @@ Still, partitioning ET into its constituent components, let alone vertically par
 An increasing availability of airborne and spaceborne LiDAR remote sensing data offers a promising opportunity for mapping vertical thermal gradients and vegetation structure. [Drone based FLIR cams, tower thermal cams (Pau et al 2018), ECOSTRESS]. To evaluate large-scale ecosystem patterns, high resolution vertically resolved vegetation structure from LiDAR data can be analyzed in combination with collocated field measurements collected using towers (FluxNet REF), canopy cranes (@nakamuraForestsTheirCanopies2017), or by tree climbing (REF – e.g. Asner papers, Shenkin et al – Unding Jami’s work). Existing research efforts have already revealed incredibly heterogeneity in vegetation structure, diversity, traits, and properties both within and across ecosystems (REFS – Stovall, Schneider, …others). 
 
 *Representing Vertical Gradients in Models* 
+(@Nidhi & @Krista, feel free to edit/remove any of the above text. I'm adding more text than we'll want in the end, but I want to air on the side of more rather than less so that you can make decisions about what content you think best fits the goal of this review. At some point, perhaps we should discuss this section further and I can revise based on that.) 
+
+Models representing ecosystem dynamics and vegetation demographic processes related to carbon, energy, and water fluxes operate at varying scales and have varying degrees of complexity and spatial resolution, including offline models and models that can be fully coupled with Earth System Models (ESMs). Dynamic global vegetation models (DGVMs) are the components of land surface models in ESMs used to predict the global distribution of vegetation types from physiological principles (Cao & Woodward, 1998; Foley et al., 1996; Sitch et al., 2003; Woodward & Lomas, 2004). Improved representation of vegetation demography in ESMs, specifically including forest canopy architectural variation in both horizontal and vertical directions, has repeatedly been identified as a critical step toward reduced uncertainty and more realistic representation of biologically mediated feedbacks in modeling future climates (Banerjee & Linn 2018, Evans, 2012; Moorcroft, 2006; Moorcroft, Hurtt, & Pacala, 2001; Purves & Pacala, 2008; Thomas, Brookshire, & Gerber, 2015). As models increase in complexity, however, it remains important to consider that model developments and improvements have direct tradeoffs with increasing model complexity and computational costs, and potentially decreased interpretability of model output. 
+
+In general, DGVMs fall along a spectrum that ranges from Individual Based Models (IBMs) on one end of the complexity/scale spectrum to big-leaf models on the other end. Most climate models incorporate vegetation dynamics using big-leaf models. These big-leaf models include most first generation DGVMs that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer. This simplification results in greater computational efficiency and thus easier integration into ESMs (Arora & Boer, 2010; Bonan, Levis, Sitch, Vertenstein, & Oleson, 2003; Cox, 2001; Krinner et al., 2005), although it comes at a cost of a lack of representation of many important demographic processes, canopy gap formation, vertical light competition, competitive exclusion, and successional recovery from disturbance (Feeley et al., 2007; Hurtt, Moorcroft, Pacala, & Levin, 1998; Moorcroft et al., 2001; Smith, Prentice, & Sykes, 2001; Stark et al., 2012).
+
+On the other end of the spectrum are IBMs, also referred to as forest gap models, representing vegetation at the level of individual plants (Christoffersen et al., 2016; Fischer et al., 2016; Fyllas et al., 2014; Sato, Ito, & Kohyama, 2007; Shuman, Shugart, & Krankina, 2014; Smith et al., 2001; Bugmann, 2001; Dietze & Latimer, 2011). These models are often stochastic and spatially explicit, capturing the spatial variability in the light environment and microclimates at high vertical and horizontal resolution. As a result, however, IBMs are computationally expensive and tend to be run at very local scales. 
+
+In the middle of this spectrum are cohort-based models (CBMs), which are a compromise between the abstraction of big-leaf models and the computational expense of IBMs. Many CBMs represent vegetation as individual plants that are grouped together when they have properties (size, age, functional type) (Haverd et al., 2013; Hurtt et al., 1998; Lischke, Zimmermann, Bolliger, Rickebusch, & L€offler, 2006; Medvigy, Wofsy, Munger, Hollinger, & Moorcroft, 2009; Moorcroft et al., 2001; Scherstjanoi, Kaplan, & Lischke, 2014; Smith et al., 2014; Weng et al., 2015). The cohort approach retains the dynamics of IBMs, with reduced computational cost, but removes stochastic processes that can enhance the representation of functional diversity (Fisher et al., 2010). There is currently a lot of development of CBMs, most notably are the Ecosystem Demography model version 2 (ED2) and the Functionally Assembled Terrestrial Ecosystem Simulator (FATES), which is coupled with the Energy Exascale Earth System Model (E3SM) (Moorcroft et al. 2001, Longo et al 2019 Pt 1 & pt 2, Holm et al ?? for FATES). 
+
+-	Still to come: more detailed description of vertical light environment and thermodynamics in ED (and FATES?) 
+
+
+
 -	How do models currently integrate or not integrate these concepts and dynamics
 -	What does that mean for about ability to predict/understand how forest ecosystems will respond in the future?
 - E.g. see de Pury & Farquhar, 1997 : though likely an improvement over 'big-leaf' models, models that separate the canopy into sunlit and shaded portions (sun/shade models) may not be able to capture important within-canopy variation in terms of leaf dynamics (e.g. seasonal shifts in vertical leaf area distributions, Smith et al. 2019) and functions (e.g. thermal responses, as we present in this paper). Hence, multi-layered ecosystem models may be necessary for accurately projecting future forest function.
@@ -485,10 +499,6 @@ An increasing availability of airborne and spaceborne LiDAR remote sensing data 
 *Knowledge Gaps & Future Research*
 -	What major gaps in knowledge and/or important questions emerge from this review (i.e. a lot of focus on droughts justifiably, but understanding heterogeneous impacts of temperature increases on forest ecosystems, particularly at vertically resolved scales is also important.)
 - Not sure where this section should go
-
-
-[@nakamuraForestsTheirCanopies2017]--> modelling ideas?
-
 
 ### Implications for climate change responses
 
